welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:19: error: Int does not take parameters
        var indice = modulo(j+1,longueurT)
                           ^Array1:32: error: not found: value n
def modulo :Int =(n:Int,k:Int){
                  ^Array1:32: error: not found: value k
def modulo :Int =(n:Int,k:Int){
                        ^Array1:33: error: not found: value n
  if (n>=k)
      ^Array1:33: error: not found: value k
  if (n>=k)
         ^Array1:34: error: not found: value n
  	return n-k
               ^Array1:34: error: not found: value k
  	return n-k
                 ^Array1:35: error: not found: value n
  return n
         ^